--- a/Services/Storage/Storage.properties
+++ b/Services/Storage/Storage.properties
@@ -1,6 +1,6 @@
 debug=true
-log4j.configurationFile=./config/local.log4j.xml
+log4j.configurationFile=./config/debug.log4j.xml
 messageserver.address=localhost
 messageserver.port=20102
 clientName=StorageService
-storagespace=/Users/Hwaipy/Documents/Data/storagespace/
+storagespace=.storagespace/
