Basic view of HBT in Wydra DataView page

--- a/Sydra/Sydra/Sydra.properties
+++ b/Sydra/Sydra/Sydra.properties
@@ -1,4 +1,4 @@
 debug=true
-log4j.configurationFile=./config/debug.log4j.xml
+log4j.configurationFile=./config/sydra.debug.log4j.xml
 messageserver.port.msgpack=20102
 messageserver.port.json=20103
