--- a/Sydra/Wydra/Wydra.properties
+++ b/Sydra/Wydra/Wydra.properties
@@ -1,5 +1,5 @@
 debug=true
-log4j.configurationFile=./config/debug.log4j.xml
+log4j.configurationFile=./config/wydra.debug.log4j.xml
 messageserver.address=localhost
 messageserver.port=20102
 clientName=Wydra-WebService
